# tfwrap

./: .gitignore  MANIFEST.in  README-legacy.md  README.md  pyproject.toml  setup.py  tfwrapper-legacy.py  tfwrapper-legacy.sh
frontend/bootstrap/: README.md
src/tfwrap/: __main__.py  main.py  version.py
src/tfwrapper/: __init__.py  __main__.py  main.py  version.py
