[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfwrapper"
version = "1.0.0"
description = "A CLI tool for managing Terraform remote backends and bootstrapping infrastructure"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "boto3>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/timothy-cloudopsguy/tfwrapper"
Repository = "https://github.com/timothy-cloudopsguy/tfwrapper"
Issues = "https://github.com/timothy-cloudopsguy/tfwrapper/issues"

[project.scripts]
tfwrapper = "tfwrapper.main:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
